python/testData/highlighting/unicodeOrByte25.py
_ = "no doc comments in this file"

z = (
    "simple"
    "escaped \u1234 correct"
    "escaped \u123z incorrect"
    "escaped \U12345678 correct"
    "escaped \U1234567 incorrect"
    "hex <info descr="null">\x12</info> correct"
    "hex <error descr="Invalid escape sequence">\x1z</error> incorrect"
    "named \N{comma} correct"
    "named \N{123} incorrect"
    "named \N{foo, incorrect"
    "named incomplete \N{aa"
    #"lone backslash \"
)
z = "hex <info descr="null">\x12</info> correct"
z = "hex <info descr="null">\x12</info>3 correct"
z = "hex <error descr="Invalid escape sequence">\x1z</error> incorrect"
z = "hex incomplete<error descr="Invalid escape sequence">\x</error>"
z = "hex incomplete<error descr="Invalid escape sequence">\x1</error>"
z = "one char <info descr="null">\n</info> correct"
z = "one char \Q ignored"
z = "octal <info descr="null">\007</info> correct"
z = "octal <info descr="null">\27</info> correct"
z = "octal <info descr="null">\7</info> correct"
z = "octal <info descr="null">\00</info>8 deceptively correct"
z = "non-octal \986 ignored"
